--- a/202111.md
+++ b/202111.md
@@ -6,13 +6,12 @@
     - git config --global core.excludesFile ~/.gitignore
     - git check-ignore -v "Filename"  
 2. [shfmt：Shell 脚本的格式化](https://www.bilibili.com/video/BV1hU4y1g72L/)
-    - [shfmt](https://github.com/mvdan/sh)
-    - Go安装: $ go install mvdan.cc/sh/v3/cmd/shfmt@latest
-    - snap install
-    - Shell 的格式化
-    - [vim-shfmt](https://github.com/z0mbix/vim-shfmt)   
+    - [shfmt](https://github.com/mvdan/sh)安装方法：
+        - Go安装: $ go install mvdan.cc/sh/v3/cmd/shfmt@latest
+        - snap install
+    - Vim 插件：[vim-shfmt](https://github.com/z0mbix/vim-shfmt)   
 3. [Remmina 的自动化编译脚本，对 NLA 的支持](https://www.bilibili.com/video/BV1vR4y1E713/)
-    - [NLA](https://www.wikiwand.com/en/Network_Level_Authentication)
+    - [NLA](https://www.wikiwand.com/en/Network_Level_Authentication)：Network_Level_Authentication
     - FreeRDP 插件
         - [Remmina](https://github.com/LeisureLinux/Remmina) 
         - [FreeRDP](https://github.com/LeisureLinux/FreeRDP)
@@ -20,4 +19,8 @@
     - [MarkdownPreview](https://vimawesome.com/plugin/markdown-preview-nvim)
     - [LeisureLinux VimPlugins](https://github.com/LeisureLinux/VimPlugins)
 
+
+#### 日期: 11.06
+1. [微软的 ReFS 文件系统以及Win7和微软何时消灭 NTFS？](https://www.bilibili.com/video/BV19g411K7t9)
+    - [Analysis of the Windows Resilient File System](https://github.com/LeisureLinux/bilibili/releases/download/V1.0.0/Resilient.File.System.ReFS.pdf)：This document is intended as a working document for the ReFS format. Which should allow existing Open Source forensic tooling to be able to process this type of file system. 
 
