add markmap html files

--- a/202110.md
+++ b/202110.md
@@ -1,82 +1,82 @@
 
 ## 2021年10月 [B站视频笔记](https://space.bilibili.com/517298151)
 
-#### 日期: 10.07
+- 读书笔记
+    - [推荐2本书《计算机系统》《GNU Linux命令行简介》和树莓派手册](https://www.bilibili.com/video/BV1DL411G7kX)
+        - [《Randal E. Bryant, David R. O’Hallaron - Computer Systems. A Programmer’s Perspective \[3rd ed.\] (2016, Pearson)》](https://raw.githubusercontent.com/LeisureLinux/an-askreddit-list-of-compsci-books/master/Randal%20E.%20Bryant%2C%20David%20R.%20O%E2%80%99Hallaron%20-%20Computer%20Systems.%20A%20Programmer%E2%80%99s%20Perspective%20%5B3rd%20ed.%5D%20\(2016%2C%20Pearson\).pdf)
+        - [GNU/Linux Command−Line Tools Summary](https://tldp.org/LDP/GNU-Linux-Tools-Summary/GNU-Linux-Tools-Summary.pdf)
+        - [Raspberry Pi 4 Model B Datasheet](https://static.raspberrypi.org/files/product-briefs/Raspberry-Pi-4-Product-Brief.pdf)
 
-1. [推荐2本书《计算机系统》《GNU Linux命令行简介》和树莓派手册](https://www.bilibili.com/video/BV1DL411G7kX)
-    - [《Randal E. Bryant, David R. O’Hallaron - Computer Systems. A Programmer’s Perspective \[3rd ed.\] (2016, Pearson)》](https://raw.githubusercontent.com/LeisureLinux/an-askreddit-list-of-compsci-books/master/Randal%20E.%20Bryant%2C%20David%20R.%20O%E2%80%99Hallaron%20-%20Computer%20Systems.%20A%20Programmer%E2%80%99s%20Perspective%20%5B3rd%20ed.%5D%20\(2016%2C%20Pearson\).pdf)
-    - [GNU/Linux Command−Line Tools Summary](https://tldp.org/LDP/GNU-Linux-Tools-Summary/GNU-Linux-Tools-Summary.pdf)
-    - [Raspberry Pi 4 Model B Datasheet](https://static.raspberrypi.org/files/product-briefs/Raspberry-Pi-4-Product-Brief.pdf)
+- Vim
+    - [vim 的区块缩进和列模式编辑](https://www.bilibili.com/video/BV13u411o7tu)
 
-- 待整理
     - [通过使用 vim 帮助，高效使用 Vim 各种插件，兰花指纷飞，代码一气呵成](https://www.bilibili.com/video/BV18h411t7Kv)
     - [vim 的插件安装 Vundle 以及 taglist 插件-渐入佳境](https://www.bilibili.com/video/BV17Q4y1S7bD)
     - [为 vim 安装合适的颜色主题](https://www.bilibili.com/video/BV1vu411o7mo)
     - [vim 的 tag 功能](https://www.bilibili.com/video/BV1fU4y1u7yV)
     - [nvim 和 vim 的区别，窗口操作以及nvim 里面的终端](https://www.bilibili.com/video/BV1h34y1o7TW)
     - [less 的配置以及 ctags 查看标签](https://www.bilibili.com/video/BV1SS4y1R7A8)
+
+
+- Qt 相关
+    - [Qt 编程，大有可为](https://www.bilibili.com/video/BV1Kr4y117ft)
+    - [Deepin-深度操作系统简介](https://www.bilibili.com/video/BV1TU4y1c74j)
+    - [Qt编程入门-理解qmake](https://www.bilibili.com/video/BV1sq4y1G7SJ)
+    - [QtCreator 的搜狗输入法 fcitx 的解决以及 strace 大法](https://www.bilibili.com/video/BV1zv411u7xn)
+    - [QtCreator初上手-中文输入待解决](https://www.bilibili.com/video/BV1Xu411d7ym)
     - [Qt的国际化-从贪吃蛇游戏的汉化开始](https://www.bilibili.com/video/BV1tv411u717)
     - [Qt6.2简介](https://www.bilibili.com/video/BV1eR4y177XA)
     - [qmake install & github 发布版本](https://www.bilibili.com/video/BV1jP4y1L7U3)
     - [qmake的目录整理+gitignore](https://www.bilibili.com/video/BV1Pu411o7TE)
     - [Qt-MySQL 驱动不能加载-你忘记安装相应的软件包了](https://www.bilibili.com/video/BV1Tb4y1a7bK)
-    - [Linux 的 RDP 客户端-Freerdp & rdesktop & Remmina](https://www.bilibili.com/video/BV1hU4y1u7Qb)
-    - [cmake-gui 图形界面配置编译代码以及 sublime text 环境下的编译](https://www.bilibili.com/video/BV12T4y1R7gM)
-    - [把 PHP 程序打包为桌面应用-PHPDesktop 的 Linux 版本介绍](https://www.bilibili.com/video/BV11R4y1J7c3)
-    - [用 Web 技术开发桌面应用，Electron 框架介绍](https://www.bilibili.com/video/BV1if4y1M7XB)
-    - [那些嵌入 Chromium (CEF) 作为浏览器引擎的大佬软件](https://www.bilibili.com/video/BV1144y1v7cn)
-    - [Qt 编程，大有可为](https://www.bilibili.com/video/BV1Kr4y117ft)
-    - [Deepin-深度操作系统简介](https://www.bilibili.com/video/BV1TU4y1c74j)
-    - [Linux上的输入法引擎 fcitx & ibus](https://www.bilibili.com/video/BV1A3411k7qY)
-    - [Qt编程入门-理解qmake](https://www.bilibili.com/video/BV1sq4y1G7SJ)
-    - [QtCreator 的搜狗输入法 fcitx 的解决以及 strace 大法](https://www.bilibili.com/video/BV1zv411u7xn)
-    - [QtCreator初上手-中文输入待解决](https://www.bilibili.com/video/BV1Xu411d7ym)
-    - [《系统架构设计》聊聊架构师的软技能](https://www.bilibili.com/video/BV17Q4y1q7wg)
+
+- 计算机架构
     - [计算机在交给操作系统之前所做的事情，UEFI 和 BIOS  的故事](https://www.bilibili.com/video/BV1kR4y177GX)
-    - [vim 的区块缩进和列模式编辑](https://www.bilibili.com/video/BV13u411o7tu)
-    - [Facebook 事故中的 BGP 通告和 DNS 消失-Anycast的监控](https://www.bilibili.com/video/BV1Wq4y1R7p2)
-    - [通过命令行修改 Dell 笔记本的 BIOS 信息-资产标签-密码-启动顺序](https://www.bilibili.com/video/BV1RL4y1i7EA)
+
+- Ubuntu
+    - [Ubuntu 版本介绍](https://www.bilibili.com/video/BV1Qh411b7Ho)
+    - [Ubuntu 的键盘快捷键以及定制&Chrome插件](https://www.bilibili.com/video/BV1pU4y1w73e)
     - [了解 Ubuntu 上的各种 Utils 软件工具](https://www.bilibili.com/video/BV1c44y1i7gc)
     - [apt 高级包管理工具-Build-Essential 以及 Essential 和 MetaPackage](https://www.bilibili.com/video/BV1ZT4y1o7Xn)
-    - [费曼学习法和抬杠大师以及白嫖](https://www.bilibili.com/video/BV12f4y1g7LH)
-    - [可执行文件格式 ELF-PE-Mach-O 介绍-(edit2)](https://www.bilibili.com/video/BV1LR4y1J7Ne)
-    - [推荐2本书《计算机系统》《GNU Linux命令行简介》和树莓派手册](https://www.bilibili.com/video/BV1DL411G7kX)
-    - [Ubuntu 版本介绍](https://www.bilibili.com/video/BV1Qh411b7Ho)
+
+
+- PHP
     - [LNMP-Nginx+PHP 如何整合](https://www.bilibili.com/video/BV1Qr4y1y7AU)
+    - [LAMP介绍 php-fpm vs mod-php](https://www.bilibili.com/video/BV1Yb4y1Y75H)
+    - [PHP 的 PECL，PEAR 和 Composer 三种仓库](https://www.bilibili.com/video/BV15f4y1g7t7)
+    - [php 扩展源码编译安装和软件包安装以及 libvirt-php 扩展介绍](https://www.bilibili.com/video/BV1eQ4y1B7Y4)
+    - [把 PHP 程序打包为桌面应用-PHPDesktop 的 Linux 版本介绍](https://www.bilibili.com/video/BV11R4y1J7c3)
+
+- 运维
+    - [了解虚拟化技术的分类，看这个视频就对了](https://www.bilibili.com/video/BV1NF411e7S2)
+    - [DevOps 的基础：Linux 和程序能力](https://www.bilibili.com/video/BV1XQ4y1i7Bq)
+    - [虚拟化技术的胶水-libvirt-virsh 远程管理虚拟机](https://www.bilibili.com/video/BV1LU4y1F7uQ)
+    - [Facebook 事故中的 BGP 通告和 DNS 消失-Anycast的监控](https://www.bilibili.com/video/BV1Wq4y1R7p2)
+    - [AWS EC2 & Lightsail 介绍（VPS）](https://www.bilibili.com/video/BV15u411Z7dg)
+    - [了解 Facebook 如何从互联网上消失(2021.10.4 BGP/DNS宕机事件）](https://www.bilibili.com/video/BV1aQ4y1X7iv)
+
+
+- Misc
+    - [如何在 OBS 设置背景音乐](https://www.bilibili.com/video/BV1WR4y1n7Ts)
+    - [Windows11的发布以及在中国的前途展望](https://www.bilibili.com/video/BV1gv411g7Lw)
+    - [cmake-gui 图形界面配置编译代码以及 sublime text 环境下的编译](https://www.bilibili.com/video/BV12T4y1R7gM)
+    - [用 Web 技术开发桌面应用，Electron 框架介绍](https://www.bilibili.com/video/BV1if4y1M7XB)
+    - [那些嵌入 Chromium (CEF) 作为浏览器引擎的大佬软件](https://www.bilibili.com/video/BV1144y1v7cn)
+
+- Soft Skill
+    - [费曼学习法和抬杠大师以及白嫖](https://www.bilibili.com/video/BV12f4y1g7LH)
     - [学习并认知40种思维模型，直达思维巅峰，进击人生新高度](https://www.bilibili.com/video/BV1qR4y1J7Ku)
     - [读书笔记《与巴菲特共进午餐，5个真理：探寻财富，智慧与价值投资》](https://www.bilibili.com/video/BV1s34y1m7CJ)
     - [关于二八规则的一个佐证以及粉丝经济和捐赠](https://www.bilibili.com/video/BV1yP4y1t7L7)
     - [推荐一本书《时间力》，掌控自己的美好人生](https://www.bilibili.com/video/BV1nb4y1h7Ce)
-    - [了解虚拟化技术的分类，看这个视频就对了](https://www.bilibili.com/video/BV1NF411e7S2)
     - [时间管理和二八定律以及为自己快乐工作](https://www.bilibili.com/video/BV1RT4y1o7LA)
-    - [DevOps 的基础：Linux 和程序能力](https://www.bilibili.com/video/BV1XQ4y1i7Bq)
-    - [做这个频道的初心，Linux 的机会，SEO&SEM](https://www.bilibili.com/video/BV1SQ4y1B7yN)
-    - [LAMP介绍 php-fpm vs mod-php](https://www.bilibili.com/video/BV1Yb4y1Y75H)
-    - [PHP 的 PECL，PEAR 和 Composer 三种仓库](https://www.bilibili.com/video/BV15f4y1g7t7)
-    - [php 扩展源码编译安装和软件包安装以及 libvirt-php 扩展介绍](https://www.bilibili.com/video/BV1eQ4y1B7Y4)
-    - [虚拟化技术的胶水-libvirt-virsh 远程管理虚拟机](https://www.bilibili.com/video/BV1LU4y1F7uQ)
-    - [维基百科阅读器，浏览器插件 Wikiwand](https://www.bilibili.com/video/BV1if4y177RX)
-    - [在终端内阅读维基百科：wikipedia2text](https://www.bilibili.com/video/BV1L3411C7Ft)
-    - [Unix 哲学](https://www.bilibili.com/video/BV1MU4y1F76r)
-    - [GNU coreutils 包全量解析](https://www.bilibili.com/video/BV1nP4y1t7MZ)
-    - [不要学习古老的 rcp 技术了](https://www.bilibili.com/video/BV1bU4y1w7x8)
-    - [深入理解byobu，修改 shell](https://www.bilibili.com/video/BV1bQ4y1D7Yu)
-    - [finger-chfn-gpasswd用户信息和组信息的修改](https://www.bilibili.com/video/BV17T4y1o7Mx)
-    - [屏幕直播利器-screenkey & gromit-mpx](https://www.bilibili.com/video/BV1Wf4y1g7Ww)
-    - [介绍网站 FOSSMINT 以及本地搜索工具 catfish](https://www.bilibili.com/video/BV11L411s7oQ)
-    - [Ubuntu 的键盘快捷键以及定制&Chrome插件](https://www.bilibili.com/video/BV1pU4y1w73e)
     - [前端，后端，全栈，求职，城市](https://www.bilibili.com/video/BV1CQ4y167HG)
-    - [AWS EC2 & Lightsail 介绍（VPS）](https://www.bilibili.com/video/BV15u411Z7dg)
-    - [推荐一本书：Bash Cookbook 以及 nnn 介绍](https://www.bilibili.com/video/BV1Mf4y1c774)
-    - [Bash 启动文件的顺序-曾经的你](https://www.bilibili.com/video/BV1rq4y1R7Qv)
-    - [Linux 的任务管理后台处理-nohup-disown](https://www.bilibili.com/video/BV1ur4y127mp)
-    - [Windows11的发布以及在中国的前途展望](https://www.bilibili.com/video/BV1gv411g7Lw)
-    - [了解 Facebook 如何从互联网上消失(2021.10.4 BGP/DNS宕机事件）](https://www.bilibili.com/video/BV1aQ4y1X7iv)
+    - [做这个频道的初心，Linux 的机会，SEO&SEM](https://www.bilibili.com/video/BV1SQ4y1B7yN)
+    - [《系统架构设计》聊聊架构师的软技能](https://www.bilibili.com/video/BV17Q4y1q7wg)
+
+- Linux 基础
     - [Linux BASH 内置命令从入门到精通](https://www.bilibili.com/video/BV1m34y1U7rd)
-    - [终端多路分屏-屏风-Byobu-tmux-screen](https://www.bilibili.com/video/BV15R4y1H76g)
-    - [一边听莫扎特一边学习 Byobu (屏风）（官网原版）](https://www.bilibili.com/video/BV14h411J7hB)
-    - [Linux Bash 实战示例，如何阅读一本书以及 xmllint 解析B站首页](https://www.bilibili.com/video/BV1uR4y1H76P)
-    - [Linux 下的 Java SDK环境设置](https://www.bilibili.com/video/BV1UP4y1b7To)
+    - [Linux 的任务管理后台处理-nohup-disown](https://www.bilibili.com/video/BV1ur4y127mp)
     - [Linux入门到精通-终极脚本示例](https://www.bilibili.com/video/BV1nQ4y167L4)
     - [Linux 的打印服务-CUPS](https://www.bilibili.com/video/BV1Fg411F7rk)
     - [Linux定时任务 crontab 详解](https://www.bilibili.com/video/BV1Tv411G7dn)
@@ -85,12 +85,31 @@
     - [Linux的超级进程 ps 1](https://www.bilibili.com/video/BV1o44y147Bw)
     - [Linux进程管理基础命令](https://www.bilibili.com/video/BV1dQ4y1z7Vc)
     - [Linux 学习者的春天来了-谈职业生涯](https://www.bilibili.com/video/BV17L4y1z7BX)
-    - [Linux高级网络命令](https://www.bilibili.com/video/BV1yL4y1z7xg)
     - [Linux远程复制和文件同步(ssh/scp/rsync)](https://www.bilibili.com/video/BV1M341117Sv)
     - [Linux 下的下载器 wget-curl-axel](https://www.bilibili.com/video/BV19f4y1E7qJ)
-    - [如何在 OBS 设置背景音乐](https://www.bilibili.com/video/BV1WR4y1n7Ts)
     - [Linux的网络基础命令](https://www.bilibili.com/video/BV1E34y1U7Kc)
     - [Linux 的磁盘分区文件系统以及用户管理](https://www.bilibili.com/video/BV1nh411H7Pp)
     - [Linux 的磁盘以及文件系统管理](https://www.bilibili.com/video/BV13Q4y167Gh)
+    - [Linux高级网络命令](https://www.bilibili.com/video/BV1yL4y1z7xg)
+    - [Linux Bash 实战示例，如何阅读一本书以及 xmllint 解析B站首页](https://www.bilibili.com/video/BV1uR4y1H76P)
+    - [Linux 下的 Java SDK环境设置](https://www.bilibili.com/video/BV1UP4y1b7To)
+    - [GNU coreutils 包全量解析](https://www.bilibili.com/video/BV1nP4y1t7MZ)
+    - [finger-chfn-gpasswd用户信息和组信息的修改](https://www.bilibili.com/video/BV17T4y1o7Mx)
+    - [推荐一本书：Bash Cookbook 以及 nnn 介绍](https://www.bilibili.com/video/BV1Mf4y1c774)
+    - [Bash 启动文件的顺序-曾经的你](https://www.bilibili.com/video/BV1rq4y1R7Qv)
+    - [Unix 哲学](https://www.bilibili.com/video/BV1MU4y1F76r)
+    - [可执行文件格式 ELF-PE-Mach-O 介绍-(edit2)](https://www.bilibili.com/video/BV1LR4y1J7Ne)
+    - [Linux上的输入法引擎 fcitx & ibus](https://www.bilibili.com/video/BV1A3411k7qY)
+    - [不要学习古老的 rcp 技术了](https://www.bilibili.com/video/BV1bU4y1w7x8)
 
+- Linux 工具
+    - [深入理解byobu，修改 shell](https://www.bilibili.com/video/BV1bQ4y1D7Yu)
+    - [终端多路分屏-屏风-Byobu-tmux-screen](https://www.bilibili.com/video/BV15R4y1H76g)
+    - [一边听莫扎特一边学习 Byobu (屏风）（官网原版）](https://www.bilibili.com/video/BV14h411J7hB)
+    - [屏幕直播利器-screenkey & gromit-mpx](https://www.bilibili.com/video/BV1Wf4y1g7Ww)
+    - [介绍网站 FOSSMINT 以及本地搜索工具 catfish](https://www.bilibili.com/video/BV11L411s7oQ)
+    - [通过命令行修改 Dell 笔记本的 BIOS 信息-资产标签-密码-启动顺序](https://www.bilibili.com/video/BV1RL4y1i7EA)
+    - [维基百科阅读器，浏览器插件 Wikiwand](https://www.bilibili.com/video/BV1if4y177RX)
+    - [在终端内阅读维基百科：wikipedia2text](https://www.bilibili.com/video/BV1L3411C7Ft)
+    - [Linux 的 RDP 客户端-Freerdp & rdesktop & Remmina](https://www.bilibili.com/video/BV1hU4y1u7Qb)
 
