--- a/202111.md
+++ b/202111.md
@@ -1,6 +1,6 @@
 ## 2021年11月 [B站视频笔记](https://space.bilibili.com/517298151)
 
-- git
+- Git
     - [gitignore 的全局添加【递归】](https://www.bilibili.com/video/BV1WL411u7Xk/)
         - git config --global core.excludesFile ~/.gitignore
         - git check-ignore -v "Filename"  
@@ -18,7 +18,7 @@
             > to process this type of file system. 
 
 - Vim
-    - 11.8 [把Markdown文件转化为思维导图](to be uploaded)
+    - 11.8 [把Markdown文件转化为思维导图](https://to.be/uploaded)
         - 官网：[coc-markmap](https://github.com/gera2ld/coc-markmap)
         - 事先需要安装 [cocnvim](https://github.com/neoclide/coc.nvim)
         - 安装： :CocInstall coc-markmap ，非常非常慢，考虑先用 yarn 安装
@@ -55,5 +55,6 @@
     - [程序编译相关的5种代码类型](https://www.bilibili.com/video/BV1sL411u7QW)
     - [VT220-Terminal 的历史以及 TERM 变量](https://www.bilibili.com/video/BV1nq4y1k7tG)
     - [好玩的 xcowsay + fortune 显示名言名句](https://www.bilibili.com/video/BV1bv411T7C5)
+
 
 
