--- a/tags/计算机.md
+++ b/tags/计算机.md
@@ -1,30 +1,27 @@
-- 2021-11
-
+- 计算机
     - [把Markdown文件转化为思维导图](https://www.bilibili.com/video/BV1Fr4y1y7eK)
         - 去主标签查看笔记/注释：[编程开发](../tags/编程开发.md)
         - 时长：807 秒
-        - 日期：2021-11-08
-        - 副标签：编程开发,计算机,Linux,Shell,Markdown,思维导图,Vim
+        - 日期：[2021-11-08](../month/202111.md)
+        - 标签：编程开发,计算机,Linux,Shell,Markdown,思维导图,Vim
         - [封面](http://i1.hdslb.com/bfs/archive/729eaac4096ce826455d15ad252413f021570740.jpg)
         - 简介：
             > "只要你愿意想象，自由的 Linux 总是能给你惊喜！"
 
-
     - [用 awk 转换 Timestamp 格式的日期](https://www.bilibili.com/video/BV1zL4y1q75m)
         - 去主标签查看笔记/注释：[编程开发](../tags/编程开发.md)
         - 时长：554 秒
-        - 日期：2021-11-07
-        - 副标签：编程开发,计算机,Linux,Shell,数据处理,awk,CSV
+        - 日期：[2021-11-07](../month/202111.md)
+        - 标签：编程开发,计算机,Linux,Shell,数据处理,awk,CSV
         - [封面](http://i0.hdslb.com/bfs/archive/4633bcfd12560321e49a6e42efd042766e0a3dbb.jpg)
         - 简介：
             > "awk 大法好，越用越奇妙"
 
-
     - [如何在命令行下抓取网站 JSON 内容转换成 CSV 格式文件](https://www.bilibili.com/video/BV1bS4y1d7SE)
         - 去主标签查看笔记/注释：[编程开发](../tags/编程开发.md)
         - 时长：338 秒
-        - 日期：2021-11-07
-        - 副标签：编程开发,计算机,Linux,Shell,数据处理,HTML,JSON,浏览器,爬虫
+        - 日期：[2021-11-07](../month/202111.md)
+        - 标签：编程开发,计算机,Linux,Shell,数据处理,HTML,JSON,浏览器,爬虫
         - [封面](http://i0.hdslb.com/bfs/archive/e106816b888ec644adf1555c377aa59ea2150415.jpg)
         - 简介：
             > "爬虫原理也讲完了。
@@ -32,52 +29,45 @@
 所谓大数据，你往里丢 JSON 和 丢 CSV 都是可以的，无非是原数据要先处理好，然后通过 BI 来实现数据可视化。
 核心的你要学会 Cookie 是怎么来的。"
 
-
     - [用 jq 命令处理网站上抓下来的 JSON 数据](https://www.bilibili.com/video/BV1jg411K7WP)
         - 去主标签查看笔记/注释：[编程开发](../tags/编程开发.md)
         - 时长：347 秒
-        - 日期：2021-11-07
-        - 副标签：编程开发,计算机,Linux,Shell,数据处理,HTML,JSON,浏览器
+        - 日期：[2021-11-07](../month/202111.md)
+        - 标签：编程开发,计算机,Linux,Shell,数据处理,HTML,JSON,浏览器
         - [封面](http://i2.hdslb.com/bfs/archive/15845741c1496666228f4fb01d91891661f1f2cd.jpg)
-
     - [Remmina的自动化编译脚本，对 NLA 的支持以及 glade 简介](https://www.bilibili.com/video/BV1vR4y1E713)
         - 去主标签查看笔记/注释：[编程开发](../tags/编程开发.md)
         - 时长：582 秒
-        - 日期：2021-11-07
-        - 副标签：编程开发,计算机,Linux,Shell,Windows,远程连接,NLA,安全认证,计算机安全,GTK编程
+        - 日期：[2021-11-07](../month/202111.md)
+        - 标签：编程开发,计算机,Linux,Shell,Windows,远程连接,NLA,安全认证,计算机安全,GTK编程
         - [封面](http://i1.hdslb.com/bfs/archive/db2297c189fcdd3fb256e346a241f71a7f0e64cf.jpg)
-
     - [gitignore 的全局添加【递归】](https://www.bilibili.com/video/BV1WL411u7Xk)
         - 去主标签查看笔记/注释：[编程开发](../tags/编程开发.md)
         - 时长：453 秒
-        - 日期：2021-11-07
-        - 副标签：编程开发,计算机,Linux,Shell,git
+        - 日期：[2021-11-07](../month/202111.md)
+        - 标签：编程开发,计算机,Linux,Shell,git
         - [封面](http://i1.hdslb.com/bfs/archive/91148d942b1944d341ddef63173fa23391ae8b06.jpg)
-
     - [Vim 插件：Markdown 文件预览](https://www.bilibili.com/video/BV1eL411u7vz)
         - 去主标签查看笔记/注释：[编程开发](../tags/编程开发.md)
         - 时长：600 秒
-        - 日期：2021-11-07
-        - 副标签：编程开发,计算机,Linux,Vim,Markdown,插件,代码美化
+        - 日期：[2021-11-07](../month/202111.md)
+        - 标签：编程开发,计算机,Linux,Vim,Markdown,插件,代码美化
         - [封面](http://i0.hdslb.com/bfs/archive/27227c78ab049e9b71fd3d8708cef007f2427d24.jpg)
-
     - [shfmt：Shell 脚本的格式化](https://www.bilibili.com/video/BV1hU4y1g72L)
         - 去主标签查看笔记/注释：[编程开发](../tags/编程开发.md)
         - 时长：405 秒
-        - 日期：2021-11-07
-        - 副标签：编程开发,计算机,Linux,Shell,Vim,NVim,插件,代码美化
+        - 日期：[2021-11-07](../month/202111.md)
+        - 标签：编程开发,计算机,Linux,Shell,Vim,NVim,插件,代码美化
         - [封面](http://i2.hdslb.com/bfs/archive/e190d5d385867a55379fc2a3cdbf2344d8ee2ad7.jpg)
 
-    - [WSL 无论是1还是2都是垃圾](https://www.bilibili.com/video/BV1Fq4y1k7yk)
-        - 去主标签查看笔记/注释：[计算机](../tags/计算机.md)
+    - **[WSL 无论是1还是2都是垃圾](https://www.bilibili.com/video/BV1Fq4y1k7yk)**
         - 时长：193 秒
-        - 日期：2021-11-06
-        - 副标签：计算机,Linux,Shell,Windows,WSL
+        - 日期：[2021-11-06](../month/202111.md)
+        - 其他标签：[Linux](../tags/Linux.md),[Shell](../tags/Shell.md),[Windows](../tags/Windows.md),[WSL](../tags/WSL.md),
         - [封面](http://i1.hdslb.com/bfs/archive/e251104dcc334620a2dc9fee52911db7a3a322fb.jpg)
-
     - [程序编译相关的5种代码类型](https://www.bilibili.com/video/BV1sL411u7QW)
         - 去主标签查看笔记/注释：[编程开发](../tags/编程开发.md)
         - 时长：395 秒
-        - 日期：2021-11-06
-        - 副标签：编程开发,c语言,计算机,Linux,编译原理
+        - 日期：[2021-11-06](../month/202111.md)
+        - 标签：编程开发,c语言,计算机,Linux,编译原理
         - [封面](http://i2.hdslb.com/bfs/archive/e3236bdcd1e483bd4905861c4b7a70dc3f71188b.jpg)
