add up one level in md

--- a/tags/计算机.md
+++ b/tags/计算机.md
@@ -71,3 +71,9 @@
         - 日期：[2021-11-06](../month/202111.md)
         - 标签：编程开发,c语言,计算机,Linux,编译原理
         - [封面](http://i2.hdslb.com/bfs/archive/e3236bdcd1e483bd4905861c4b7a70dc3f71188b.jpg)
+
+    - **[WSL 无论是1还是2都是垃圾](https://www.bilibili.com/video/BV1Fq4y1k7yk)**
+        - 时长：193 秒
+        - 日期：[2021-11-06](../month/202111.md)
+        - 其他标签：[Linux](../tags/Linux.md),[Shell](../tags/Shell.md),[Windows](../tags/Windows.md),[WSL](../tags/WSL.md),
+        - [封面](http://i1.hdslb.com/bfs/archive/e251104dcc334620a2dc9fee52911db7a3a322fb.jpg)
